external-crates/move/crates/move-compiler/tests/move_check/parser/named_blocks_invalid_2.exp
warning[W09002]: unused variable
  ┌─ tests/move_check/parser/named_blocks_invalid_2.move:3:12
  │
3 │     fun t0(cond: bool): u64 {
  │            ^^^^ Unused parameter 'cond'. Consider removing or prefixing with an underscore: '_cond'
  │
  = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E13001]: feature is not supported in specified edition
  ┌─ tests/move_check/parser/named_blocks_invalid_2.move:4:9
  │
4 │         'name {
  │         ^^^^^ Block labels are not supported by current edition 'legacy', only '2024.alpha' and '2024.beta' support this feature
  │
  = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/named_blocks_invalid_2.move:4:15
  │
4 │         'name {
  │               ^
  │               │
  │               Unexpected '{'
  │               Expected a module member: 'spec', 'use', 'friend', 'const', 'fun', or 'struct'

error[E04007]: incompatible types
  ┌─ tests/move_check/parser/named_blocks_invalid_2.move:4:15
  │
3 │     fun t0(cond: bool): u64 {
  │                         --- Expected: 'u64'
4 │         'name {
  │               ^
  │               │
  │               Invalid return expression
  │               Given: '()'

error[E01001]: invalid character
  ┌─ tests/move_check/parser/named_blocks_invalid_2.move:5:32
  │
5 │             if (cond) { return 'name 10 };
  │                                ^^^^^ Unexpected character (')

